--- a/_sass/uno.scss
+++ b/_sass/uno.scss
@@ -1214,8 +1214,8 @@ hr {
 	background-size: cover; }
 
 .panel-cover--collapsed {
-	width: 40%;
-	max-width: 530px; }
+	width: 100%;
+	max-width: 100%; }
 
 .panel-cover--overlay {
 	display: block;
