--- a/_sass/uno.scss
+++ b/_sass/uno.scss
@@ -1249,8 +1249,8 @@ hr {
 	height: 100%; }
 
 .no-js .panel-main {
-	width: 40%;
-	max-width: 530px; }
+	width: 100%;
+	height: 100%; }
 
 .panel-main__inner {
 	display: table-cell;
