--- a/_sass/uno.scss
+++ b/_sass/uno.scss
@@ -1624,8 +1624,8 @@ input[type="tel"] {
 				margin: 1em auto; }
 
 	.navigation-wrapper {
-		display: none;
-		position: fixed;
+		//display: none;
+		//position: fixed;
 		top: 42px;
 		right: 0;
 		left: 0;
