--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
         <p class="panel-cover__description">{{ site.description }}</p>
         <hr class="panel-cover__divider panel-cover__divider--secondary">
 
-        <div class="navigation-wrapper">
+        <div  >
 
           <nav class="cover-navigation navigation--social">
             <ul class="navigation">
